app/src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --primary: #74b3ce;
  --secondary: #09bc8a;
  --white: #ffffff;
  --black: #000000;
  --bg-primary: #172a3a;
  --bg-secondary: #004346;
  --bg-tertiary: #508991;
  --success: #00d1b2;
  --error: #ff006e;
  --info: #3a86ff;
  --warning: #ffbe0b;
}

body {
  max-width: 1000px;
  margin: auto;
  color: var(--white);
  background-color: var(--bg-primary);
}

